== 7/21/2011

Initial release.

== 7/23/2011

Addition of cascading module functions.

== 7/31/2011

Total overhaul of internals.
Major interface changes.
Addition of prepend functions.
Added deprecated method exceptions for interface changes.

== 8/1/2011

Added cascades_to_module methods.

== 8/3/2011

2700% speed-up by preventing cascading duplicate includes/extends.

== 8/6/2011

Actually fixed speed problems rather than just improving them.
Add block support for declarations.
Added block methods for nested declarations.

== 8/25/2011

Updates to :perform_cascades to support cascading to extended instances.

== 10/18/2011

Changes from :module_eval to :instance_eval for instance extend support.

== 12/22/2011

Full internals update/rewrite/restructure for instance support and more complete 
hooks.

Separated out public interface modules from internal implementation modules. 

== 12/27/2011

Added ModuleCluster::Define::Status to interrogate currently defined hooks.

Added ModuleCluster::Suspend, which includes various methods to temporarily or 
permanently modify hooks that have been created.

Changed return values on interface methods from self to the set created by the method.
This permits chaining of settings, such as appending .name( :set_name ).

Added set names, which permit the later suspension of sets by name rather than having to
describe which set(s) should be suspended (although this can also be done).
