@@ -4,5 +4,6 @@ module ModuleCluster::ClusterStack::Block
   include Class
   include Module
   include Instance
-
+  include Inherited
+  
 end
